--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@ body,html{
     position: absolute;
     top: 0;
     left: 0;
-    display: none;
+    display: block;
+    z-index: 10000000000000000;
 
 }
 
